--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,21 +14,17 @@
   <form method="post" action="/index.html" class="login">
     <p>
       <label for="login">Email:</label>
-      <input type="text" name="login" id="login"></input>
+      <input type="text" name="email"  placeholder="邮箱地址或登录名称"  id="login"></input>
     </p>
-
     <p>
       <label for="password">Password:</label>
       <input type="password" name="password" id="password"></input>
     </p>
-
     <p class="login-submit">
       <button type="submit" class="login-button">Login</button>
     </p>
-
-    <p class="forgot-password"><a href="/index.html">Forgot your password?</a></p>
+    <p class="forgot-password"><a href="/forgotPassword.do">Forgot your password?</a></p>
   </form>
-
   <section class="about">
     <p class="about-links">
       <a href="https://github.com/xiongzhenggang" target="_parent">xzg</a>
