--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
-  <form method="post" action="/index.html" class="login">
+  <form method="post" action="/webSocket.do" class="login">
     <p>
       <label for="login">Email:</label>
       <input type="text" name="email"  placeholder="邮箱地址或登录名称"  id="login"></input>
