增加朋友表的数据

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,13 +11,13 @@
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
-  <form method="post" action="/webSocket.do" class="login">
+  <form method="post" action="/login.do" class="login">
     <p>
       <label for="login">Email:</label>
       <input type="text" name="email"  placeholder="邮箱地址或登录名称"  id="login"></input>
     </p>
     <p>
-      <label for="password">Password:</label>
+      <label for="password">密码:</label>
       <input type="password" name="password" id="password"></input>
     </p>
     <p class="login-submit">
