--- a/src/main/resources/templates/user/error.html
+++ b/src/main/resources/templates/user/error.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-			<h3 style="background-color: red" th:text="${errorMsg}"></h3>
+		<div style="height: 50px;background-color: red">
+			<h3 th:text="${errorMsg}"></h3>
+		</div>
 </body>
 </html>
