--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8"></meta>
-<title>错误页面</title>
+<title>Insert title here</title>
 </head>
 <body>
-页面被黑洞吸走了......
+
 </body>
 </html>
