--- a/src/main/resources/templates/user/menue.html
+++ b/src/main/resources/templates/user/menue.html
@@ -9,22 +9,8 @@
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link  rel="stylesheet" th:href="@{/css/default.css}" type="text/css" media="all" />
 <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/js/popwidown.js}"></script>
 <script>
-var lanren = {
-        navFast:function(){
-        	var scr_height = window.screen.availHeight;
-        	var float_right= 300;
-        	var o = document.getElementById("float_right");
-            var defaultTop = (scr_height - float_right)/2 - 100; //默认顶部保持上下居中，再往上去100像素
-                $(window).scroll(function(){
-                        var offsetTop = defaultTop + $(window).scrollTop()+'px';
-                        $('#float_right').animate({top:offsetTop},
-                        {duration: 600,  //滑动速度
-                        queue: false    //此动画将不进入动画队列
-                });                                               
-                });
-        }
-};
 lanren.navFast();
 
 </script>
@@ -89,11 +75,6 @@ lanren.navFast();
 					<h3>Sagittis diam dolor amet</h3>
 					<p><a href="#">Etiam non felis. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
 				</li>
-				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
-				</li>
 			</ul>
 		</div>
 	</div>
@@ -103,7 +84,7 @@ lanren.navFast();
     <a href="#" target="_blank">好友列表</a>
     <a href="#" target="_blank">时间日期</a>
     <a href="#" target="_blank">焦点图</a>
-    <a th:href="@{/websocket.do}" target="_blank">进入聊天室</a>
+    <a th:href="@{/websocket.do}"  target="_blank">进入聊天室</a>
     <a href="#" target="_blank">jQuery特效</a>
     <a href="#" target="_blank">图片特效</a>
     <a href="#" target="_blank">在线客服</a>
