--- a/src/main/resources/templates/user/menue.html
+++ b/src/main/resources/templates/user/menue.html
@@ -84,7 +84,7 @@ lanren.navFast();
     <a href="#" target="_blank">好友列表</a>
     <a href="#" target="_blank">时间日期</a>
     <a href="#" target="_blank">焦点图</a>
-    <a th:href="@{/websocket.do}"  target="_blank">进入聊天室</a>
+    <a id="startWebsocket"  th:href="@{/websocket.do}"  target="_blank">进入聊天室</a>
     <a href="#" target="_blank">jQuery特效</a>
     <a href="#" target="_blank">图片特效</a>
     <a href="#" target="_blank">在线客服</a>
