修改聊天室

--- a/src/main/resources/templates/user/menue.html
+++ b/src/main/resources/templates/user/menue.html
@@ -90,7 +90,7 @@ lanren.navFast();
 <div id="stratChat" >
 <input id="responseText" type="text" /><button id="sendMsg">发送消息</button>   
 <button id="closeChat">退出</button>
-<textarea id="message" style="width: 500px; height: 550px;"></textarea>
+<textarea id="message" readonly="readonly" style="width: 500px; height: 550px;"></textarea>
 </div>
 </body>
 </html>
